@@ -62,7 +62,7 @@ public class Async0 extends HttpServlet {
                     }
                 }
             };
-            Thread t = new Thread(run);
+            Thread t  = Thread.ofVirtual().unstarted(run);
             t.start();
         }
     }
